# EL

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  dev-requirements.txt  docker-compose.yml  env.example  env.sample  nani_bot.py  prompts.py  pyproject.toml  requirements.txt  setup.sh
agent/: __init__.py
docs/: CURIOUS_AGENT_FINAL.md  DISCORD_SMOKE_TEST.md  OPERATIONS.md  POC_EVALUATION.md  R4_RESEARCH_TRACK.md  SQLITE_MIGRATION.md  STORAGE_AND_LOGS.md  V2_OVERVIEW.md  api-reference.md  architecture.md  deployment-guide.md  integration-guide.md
el-agent/: Makefile  README.md  docker-compose.yml  pyproject.toml
el-agent/src/el_agent/: app.py  config.py  schemas.py
el-agent/src/el_agent/core/: evaluator.py  knowledge_integrator.py  orchestrator.py  strategist.py
el-agent/src/el_agent/llm/: __init__.py  client.py  prompts.py
el-agent/src/el_agent/monitoring/: metrics.py
el-agent/src/el_agent/retrieval/: es_client.py
el-agent/src/el_agent/stores/: neo4j_store.py  qdrant_store.py  redis_store.py
el-agent/src/el_agent/utils/: pii.py
el-agent/tests/: conftest.py  test_evaluator.py  test_evaluator_calibrated.py  test_health.py  test_knowledge_integrator.py  test_metrics.py  test_pii.py  test_prompts_templates.py  test_schemas.py  test_strategist.py
el_frontend/: README.md
examples/: basic_interview.py  document_upload.py
ops/: alert_rules.yml  es_stopwords.txt  es_synonyms.txt  loki-config.yaml  prometheus.yml  promtail-config.yaml
reports/: weekly.md
scripts/: DEMO_SCENARIO.md  ab_test.py  autotune_qdrant.py  calibrate_evaluator.py  e2e_gate_a.py  pipeline_cli.py  prompt_eval.py  setup_indices.py  (+2 more)
(+95 files in other folders)
