[tool.poetry]
name = "el-agent"
version = "0.1.0"
description = "EL Agent backend (FastAPI)"
authors = ["EL Team <dev@example.com>"]
readme = "README.md"
packages = [
  { include = "el_agent", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
neo4j = "^5.20.0"
qdrant-client = "^1.9.0"
elasticsearch = "^8.13.0"
openai = "^1.37.0"
httpx = "^0.27.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.5.0"
black = "^24.4.2"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


